2008-04-10  Juanma Barranquero  <lekktu@gmail.com>

	* subr.el (assoc-ignore-case, assoc-ignore-representation):
	Add WHEN to obsolescence declaration.

	* makefile.w32-in (AUTOGENEL): Add calc-loaddefs.el.

2008-04-10  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hooks.el (vc-state): Add new state `conflict'.
	(vc-after-save): Use when not if.
	(vc-default-mode-line-string): Deal with the conflict state.
	(vc-prefix-map):
	(vc-menu-map): Bind vc-status instead of vc-directory.

	* vc.el (vc-editable-p):
	(vc-default-status-printer):
	(vc-next-action): Deal with the conflict state.
	(vc-mark-resolved): New function.
	(vc-status-mode): Fix mode name.
	(vc-default-comment-history): Use when not if.
	(Todo): Add new entries, remove old ones.

	* vc-cvs.el (vc-cvs-merge, vc-cvs-merge-news): Set conflict state.
	(vc-cvs-parse-status):
	(vc-cvs-after-dir-status):
	* vc-svn.el (vc-svn-after-dir-status, vc-svn-parse-status):
	Detect the conflict state.

	* vc-hg.el (vc-hg-dir-status): Remove unneeded call.

2008-04-10  Glenn Morris  <rgm@gnu.org>

	* menu-bar.el (menu-bar-options-menu) <truncate-lines>:
	Respect truncate-partial-width-windows in non-full windows,
	with regards to :toggle and :enable state.

	* simple.el (toggle-truncate-lines): Doc fix.

	* Makefile.in (MH_E_DIR): New variable.
	(MH_E_SRC): Restore variable removed 2008-03-13.
	(mh-loaddefs.el): Depend on $MH_E_SRC.
	(CAL_DIR, CAL_SRC): New variables.
	(cal-loaddefs.el, diary-loaddefs.el, hol-loaddefs.el):
	Depend on CAL_SRC.

	* calendar/calendar.el (calendar, diary): Add :prefix.
	(holidays): Change :prefix.
	(calendar-today, holiday, calendar-holiday-marker)
	(european-calendar-style): Change custom groups.

	* calendar/calendar.el (diary-hook, diary-display-hook):
	Move to diary-lib.el.
	* calendar/diary-lib.el (diary-hook, diary-display-hook):
	Move here from calendar.el.
	* calendar/appt.el: Require diary-lib rather than calendar.
	* calendar/cal-x.el (diary-display-hook): Declare for compiler.
