@@ -1,3 +1,7 @@
+2008-04-10  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-bzr.el (vc-bzr-after-dir-status): Detect the conflict state.
+
 2008-04-10  Juanma Barranquero  <lekktu@gmail.com>
 
 	* subr.el (assoc-ignore-case, assoc-ignore-representation):
